Archive2/36/3eb579e5b488ac/output
main.cpp:13:1: error: new types may not be defined in a return type
 enum ValidationError
 ^
main.cpp:13:1: note: (perhaps a semicolon is missing after the definition of 'Validator::ValidationError')
main.cpp:19:15: error: return type specification for constructor invalid
     Validator();
               ^
main.cpp:21:13: error: 'Data' has not been declared
     setData(Data data);
             ^
main.cpp:21:22: error: ISO C++ forbids declaration of 'setData' with no type [-fpermissive]
     setData(Data data);
                      ^
main.cpp:23:35: error: expected ';' at end of member declaration
     enum ValidationError getCause() cost;
                                   ^
main.cpp:23:37: error: 'cost' does not name a type
     enum ValidationError getCause() cost;
                                     ^
main.cpp:24:1: error: expected ';' after class definition
 }
 ^
main.cpp: In function 'int main()':
main.cpp:29:1: error: 'Data' was not declared in this scope
 Data data;
 ^
main.cpp:29:6: error: expected ';' before 'data'
 Data data;
      ^
main.cpp:32:19: error: 'data' was not declared in this scope
 validator.setData(data);
                   ^
